upgrade builds and scripts for newer sdk